--- a/Logistic Regression - Amazon fine food reviews .ipynb
+++ b/Logistic Regression - Amazon fine food reviews .ipynb
@@ -1121,7 +1121,7 @@
     "    accuracy_cv = []\n",
     "\n",
     "    for i in C[0:]:\n",
-    "        logistic = LogisticRegression(penalty=penal, C=i, solver='saga')\n",
+    "        logistic = LogisticRegression(penalty=penal, C=i)\n",
     "        logistic.fit(x_train, y_train)\n",
     "        \n",
     "        prediction = logistic.predict(x_cv)\n",
@@ -1173,7 +1173,7 @@
    "outputs": [],
    "source": [
     "def logistic_test(x_train, y_train, x_test, y_test, penal, optimal_C):\n",
-    "    logistic = LogisticRegression(penalty=penal, C=optimal_C, solver='saga')\n",
+    "    logistic = LogisticRegression(penalty=penal, C=optimal_C)\n",
     "    logistic.fit(x_train, y_train)\n",
     "    \n",
     "    prediction = logistic.predict(x_test)\n",
@@ -2599,196 +2599,13 @@
     "\n",
     "logistic_test(x_train_tfidfw2v, y_train, x_test_tfidfw2v, y_test, penal='l2', optimal_C=10)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 7. Applying Logistic Regression L1 Regularization on Our Model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 7.1 Bag of Words (BoW)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### 7.1.1 BoW Logistic Regression L1 Regularization on Train Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Find the optimal value of C\n",
-    "# This may take several minutes to run\n",
-    "\n",
-    "logistic_train(x_train_bow, x_cv_bow, y_train, y_cv, penal='l1')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### 7.1.2 BoW Logistic Regression L1 Regularization on Test Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Testing the final model\n",
-    "\n",
-    "logistic_test(x_train_bow, y_train, x_test_bow, y_test, penal='l1', optimal_C=10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 7.2 Term Frequency - Inverse Document Frequency (TF-IDF)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### 7.2.1 TF-IDF Logistic Regression L1 Regularization on Train Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Find the optimal value of C\n",
-    "# This may take several minutes to run\n",
-    "\n",
-    "logistic_train(x_train_tfidf, x_cv_tfidf, y_train, y_cv, penal='l1')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### 7.2.2 TF-IDF Logistic Regression L1 Regularization on Test Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Testing the final model\n",
-    "\n",
-    "logistic_test(x_train_tfidf, y_train, x_test_tfidf, y_test, penal='l1', optimal_C=10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 7.3 Average Word2Vec"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### 7.3.1 Avg W2V Logistic Regression L1 Regularization on Train Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Find the optimal value of C\n",
-    "# This may take several minutes to run\n",
-    "\n",
-    "logistic_train(x_train_avgw2v, x_cv_avgw2v, y_train, y_cv, penal='l1')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### 7.3.2 Avg W2V Logistic Regression L1 Regularization on Test Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Testing the final model\n",
-    "\n",
-    "logistic_test(x_train_avgw2v, y_train, x_test_avgw2v, y_test, penal='l1', optimal_C=10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 7.4 TF-IDF Weighed Word2Vec"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### 7.4.1 TF-IDF W2V Logistic Regression L1 Regularization on Train Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Find the optimal value of C\n",
-    "# This may take several minutes to run\n",
-    "\n",
-    "logistic_train(x_train_tfidfw2v, x_cv_tfidfw2v, y_train, y_cv, penal='l1')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### 7.4.2 TF-IDF W2V Logistic Regression L1 Regularization on Test Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Testing the final model\n",
-    "\n",
-    "logistic_test(x_train_tfidfw2v, y_train, x_test_tfidfw2v, y_test, penal='l1', optimal_C=10)"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7 (Intel® oneAPI)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "c009-intel_distribution_of_python_3_oneapi-beta05-python"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2800,7 +2617,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
