--- a/SVM - Amazon fine food reviews .ipynb
+++ b/SVM - Amazon fine food reviews .ipynb
@@ -1097,7 +1097,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Function to Train and Test Naive Baye's models"
+    "# 4. Function to Train and Test Support Vector Machine models"
    ]
   },
   {
@@ -1118,7 +1118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.1 Train function for Naive Baye's models"
+    "### 4.1 Train function for Support Vector Machine models"
    ]
   },
   {
@@ -1168,7 +1168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.2 Test function for Naive Baye's models"
+    "### 4.2 Test function for Support Vector Machine models"
    ]
   },
   {
@@ -1206,6 +1206,13 @@
     "    \n",
     "    plot_confusion_matrix(y_test, prediction)\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.3 Top 10 Features of Support Vector Machine models"
    ]
   },
   {
